--- a/src/jaco/package.xml
+++ b/src/jaco/package.xml
@@ -56,9 +56,12 @@
   <build_export_depend>roscpp</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
+  <build_depend>trajectory_msgs</build_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
+  <exec_depend>trajectory_msgs</exec_depend>
+  <exec_depend>serial</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
 
