--- a/src/jaco/package.xml
+++ b/src/jaco/package.xml
@@ -51,6 +51,9 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
+  <build_depend>moveit_core</build_depend>
+  <build_depend>moveit_ros_planning_interface</build_depend>
+  
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
@@ -64,6 +67,8 @@
   <exec_depend>serial</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
+  <exec_depend>moveit_core</exec_depend>
+  <exec_depend>moveit_ros_planning_interface</exec_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
