--- a/src/jaco/CMakeLists.txt
+++ b/src/jaco/CMakeLists.txt
@@ -55,6 +55,7 @@ add_message_files(
   FILES
    RAWItongueOut.msg
    sys_msg.msg
+   position.msg
 )
 
 ## Generate services in the 'srv' folder
@@ -75,6 +76,7 @@ add_message_files(
 generate_messages(
   DEPENDENCIES
   std_msgs
+  geometry_msgs
 )
 install(PROGRAMS
   src/jacoScript.py
@@ -227,3 +229,8 @@ install(TARGETS work_scene2 DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 add_executable(jaco_trajectory src/jaco_trajectory.cpp include/jaco_trajectory.h)
 target_link_libraries(jaco_trajectory ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${kinova_driver_LIBRARIES})
 install(TARGETS jaco_trajectory DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
+
+add_executable(shapefitting src/shapefitting.cpp include/jaco_trajectory.h)
+target_link_libraries(shapefitting ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${kinova_driver_LIBRARIES})
+install(TARGETS shapefitting DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
