--- a/src/jaco/CMakeLists.txt
+++ b/src/jaco/CMakeLists.txt
@@ -55,8 +55,9 @@ add_message_files(
   FILES
    RAWItongueOut.msg
    sys_msg.msg
-   position.msg
-   obj_pos.msg
+       position.msg
+    obj_pos.msg
+
 )
 
 ## Generate services in the 'srv' folder
@@ -119,7 +120,7 @@ install(PROGRAMS
 catkin_package(
  INCLUDE_DIRS include
 #  LIBRARIES jaco
-CATKIN_DEPENDS roscpp std_msgs message_runtime moveit_core moveit_ros_planning_interface
+CATKIN_DEPENDS roscpp std_msgs message_runtime moveit_core moveit_ros_planning_interface 
 #  DEPENDS system_lib
 )
 
@@ -235,6 +236,6 @@ add_executable(tester2 src/tester2.cpp)
 target_link_libraries(tester2 ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${kinova_driver_LIBRARIES})
 install(TARGETS tester2 DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
-add_executable(shapefitting src/shapefitting.cpp)
-target_link_libraries(shapefitting ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${kinova_driver_LIBRARIES})
-install(TARGETS shapefitting DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+# add_executable(shapefitting src/shapefitting.cpp)
+# target_link_libraries(shapefitting ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${kinova_driver_LIBRARIES})
+# install(TARGETS shapefitting DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
