--- a/src/jaco/CMakeLists.txt
+++ b/src/jaco/CMakeLists.txt
@@ -249,3 +249,8 @@ install(TARGETS scenario_semi_automatic DESTINATION ${CATKIN_PACKAGE_BIN_DESTINA
 # add_executable(shapefitting src/shapefitting.cpp)
 # target_link_libraries(shapefitting ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${kinova_driver_LIBRARIES})
 # install(TARGETS shapefitting DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+add_dependencies(work_scene2 ${catkin_EXPORTED_TARGETS})
+add_dependencies(jaco_trajectory ${catkin_EXPORTED_TARGETS})
+add_dependencies(tester2 ${catkin_EXPORTED_TARGETS})
+add_dependencies(scenario_full_automatic ${catkin_EXPORTED_TARGETS})
+add_dependencies(scenario_semi_automatic ${catkin_EXPORTED_TARGETS})
