--- a/src/shapefitting/CMakeLists.txt
+++ b/src/shapefitting/CMakeLists.txt
@@ -225,4 +225,4 @@ add_executable(Shape-Fitting src/shapefitting.cpp)
 target_link_libraries(Shape-Fitting ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${kinova_driver_LIBRARIES} ${OpenCV_LIBS} ${realsense2_LIBRARY} ${CGAL_LIBRARY})
 install(TARGETS Shape-Fitting DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
-add_dependencies(Shape-Fitting ${catkin_EXPORTED_TARGETS})
+add_dependencies(Shape-Fitting shapefitting_generate_messages_cpp)
