--- a/src/jaco/CMakeLists.txt
+++ b/src/jaco/CMakeLists.txt
@@ -71,10 +71,10 @@ add_message_files(
 # )
 
 # Generate actions in the 'action' folder
-add_action_files(
-  FILES
-  shapefitting_position.action
-)
+# add_action_files(
+#   FILES
+
+# )
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
