--- a/src/jaco/CMakeLists.txt
+++ b/src/jaco/CMakeLists.txt
@@ -68,13 +68,14 @@ add_message_files(
 #   FILES
 #   Service1.srv
 #   Service2.srv
+  moveit_ros_planning_interface
 # )
 
 # Generate actions in the 'action' folder
-# add_action_files(
-#   FILES
-
-# )
+add_action_files(
+  FILES
+  IF_fullAuto.action
+)
 
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
