--- a/src/jaco/CMakeLists.txt
+++ b/src/jaco/CMakeLists.txt
@@ -60,7 +60,7 @@ add_message_files(
   FILES
    RAWItongueOut.msg
    sys_msg.msg
-       position.msg
+  position.msg
     obj_pos.msg
 
 )
@@ -242,6 +242,10 @@ add_executable(tester2 src/tester2.cpp)
 target_link_libraries(tester2 ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${kinova_driver_LIBRARIES})
 install(TARGETS tester2 DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
+add_executable(interface src/interface.cpp)
+target_link_libraries(interface ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${kinova_driver_LIBRARIES})
+install(TARGETS interface DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
 add_executable(scenario_full_automatic src/scenario_full_automatic.cpp)
 target_link_libraries(scenario_full_automatic ${catkin_LIBRARIES} ${Boost_LIBRARIES} ${kinova_driver_LIBRARIES})
 install(TARGETS scenario_full_automatic DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
@@ -257,5 +261,6 @@ install(TARGETS scenario_semi_automatic DESTINATION ${CATKIN_PACKAGE_BIN_DESTINA
 add_dependencies(work_scene2 jaco_generate_messages_cpp )
 add_dependencies(jaco_trajectory jaco_generate_messages_cpp kinova_msgs_generate_messages_cpp)
 add_dependencies(tester2 jaco_generate_messages_cpp)
+add_dependencies(interface jaco_generate_messages_cpp)
 add_dependencies(scenario_full_automatic jaco_generate_messages_cpp)
 add_dependencies(scenario_semi_automatic jaco_generate_messages_cpp)
