--- a/src/vision/CMakeLists.txt
+++ b/src/vision/CMakeLists.txt
@@ -54,11 +54,10 @@ add_message_files(
 )
 
 ## Generate services in the 'srv' folder
-# add_service_files(
-#   FILES
-#   Service1.srv
-#   Service2.srv
-# )
+add_service_files(
+  FILES
+  detect_srv.srv
+)
 
 ## Generate actions in the 'action' folder
 # add_action_files(
@@ -71,6 +70,7 @@ add_message_files(
  generate_messages(
    DEPENDENCIES
    std_msgs  # Or other packages containing msgs
+   
  )
 
 ################################################
