--- a/src/jaco/package.xml
+++ b/src/jaco/package.xml
@@ -68,6 +68,11 @@
   <exec_depend>serial</exec_depend>
   <exec_depend>message_runtime</exec_depend>
 
+
+<build_depend>actionlib</build_depend>
+<build_depend>actionlib_msgs</build_depend>
+<exec_depend>actionlib</exec_depend>
+<exec_depend>actionlib_msgs</exec_depend>
   <exec_depend>moveit_core</exec_depend>
   <exec_depend>moveit_ros_planning_interface</exec_depend>
 
