--- a/src/shapefitting/package.xml
+++ b/src/shapefitting/package.xml
@@ -54,6 +54,7 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>actionlib_msgs</build_depend>
+  <depend>actionlib</depend>
   <!-- <depend>jaco</depend> -->
   <depend>vision</depend>
   <build_export_depend>roscpp</build_export_depend>
