--- a/src/vision/src/yolov5/requirements.txt
+++ b/src/vision/src/yolov5/requirements.txt
@@ -7,8 +7,6 @@ opencv-python>=4.1.2
 Pillow
 PyYAML>=5.3.1
 scipy>=1.4.1
-torch>=1.7.0
-torchvision>=0.8.1
 tqdm>=4.41.0
 
 # logging -------------------------------------
@@ -27,3 +25,4 @@ pandas
 # extras --------------------------------------
 thop  # FLOPS computation
 pycocotools>=2.0  # COCO mAP
+#python train.py --batch 16 --cfg '..\..\cfg\Glass-train.yaml' --data '..\..\data\drinks.yaml' --cache --epochs 100 --weights ''
