--- a/src/jaco/package.xml
+++ b/src/jaco/package.xml
@@ -55,6 +55,7 @@
   <build_depend>moveit_ros_planning_interface</build_depend>
   <depend>shapefitting</depend>
   <depend>vision</depend>
+  <depend>kinova_driver</depend>
   <build_depend>message_generation</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_export_depend>roscpp</build_export_depend>
