--- a/src/jaco/package.xml
+++ b/src/jaco/package.xml
@@ -62,13 +62,16 @@
   <build_export_depend>rospy</build_export_depend>
   <build_export_depend>std_msgs</build_export_depend>
   <build_depend>trajectory_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>cv_bridge</build_depend>
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>trajectory_msgs</exec_depend>
+  <exec_depend>sensor_msgs</exec_depend>
   <exec_depend>serial</exec_depend>
   <exec_depend>message_runtime</exec_depend>
-
+  <exec_depend>cv_bridge</exec_depend>
 
 <build_depend>actionlib</build_depend>
 <build_depend>actionlib_msgs</build_depend>
